fixing css details on button and div spacing

--- a/examples/style.css
+++ b/examples/style.css
@@ -13,14 +13,15 @@ body {
 }
 
 button, .button {
-  width: 150px;
-  height: 60px;
+  width: 80px;
   border: solid 2px #f9f9f9;
   background-color: #ffffff;
   -webkit-box-shadow: 5px 5px 5px 0px rgba(233,233,233,1);
   -moz-box-shadow: 5px 5px 5px 0px rgba(233,233,233,1);
   box-shadow: 5px 5px 5px 0px rgba(233,233,233,1);
   cursor: pointer;
+  display: flex;
+  justify-content: center;
 }
 button:focus {
   border: solid 2px blue;
@@ -49,9 +50,10 @@ button:focus {
 }
 .info-box__individual {
   margin: 2% 5%;
+  width: 50%;
+
 }
 .fa-question-circle {
   font-size: 40px;
-  color:
-  purple;
+  color:purple;
 }
